--- a/index.html
+++ b/index.html
@@ -1,61 +1,46 @@
-<html>
-
-<head>
-    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css?family=Share+Tech|Share+Tech+Mono" rel="stylesheet" />
-    <title>Designs by Laighlin</title>
-</head>
-
-<body onload="draw()">
-    <canvas id="bg"></canvas>
-    <main id="content">
-        <h1>
-            <div class="hex moved"></div><span>About the Dev</span></h1>
-        <div class="subtext" id="main">
-            <p>The name's Lin (which is short for Lindeun or Laighlin, depending on where you know me from). I'm a 24-year-old South Asian design student with a tech sort of background and a lot to say about the trends and direction of the contemporary design
-                world.</p>
-            <p>I wanted to be an engineer for most of my life. By the time I changed my mind about that, my liaison with the applied sciences had drastically altered my worldview already. This still informs much of my work and work ethic - design is no less
-                of a science in my eyes than physics or computing. (In other words, I like design as long as I can be a nerd about it.)</p>
-        </div>
-        <h2>
-            <div class="hex"></div><span>Skills</span></h2>
-        <div class="subtext coll">
-            A good grasp of object-oriented programming and computing-related math as a whole. Proficient in CSS3 and HTML5; making significant inroads into JavaScript and JQuery. Adobe Illustrator is both enjoyable for me and putty in my hands. <i>Putty.</i>            In addition to my knowledge of coding, I also speak five human languages and am in the process of learning a few more.
-        </div>
-        <h2>
-            <div class="hex"></div><span>Hobbies & Interests</span></h2>
-        <div class="subtext coll">
-            Small indie coding projects (semi-professionally). Music (unprofessionally). Massively multiplayer online games (clumsily). Cooking (hungrily).
-        </div>
-        <h2>
-            <div class="hex"></div><span>Currently Working On</span></h2>
-        <div class="subtext coll">
-            An accessibility app for Android, a couple of desktop themes for a blogging platform I casually use, and a photography project detailing the interplay of natural and artifical in urban environments.
-        </div>
-        
-        <h2>
-            <div class="hex"></div><span>Find Me</span></h2>
-        <div class="subtext coll">
-            <a>Twitter</a> | <a>Tumblr</a> | <a>Codepen</a> | <a>Behance</a>
-        </div>
-        
-        <h2>
-            <div class="hex"></div><span>Contact Me</span></h2>
-        <div class="subtext coll">
-            <ul>
-                <li>Phone: +12 345 678 90</li>
-                <li>E-mail: <a>lindeun@yahoo.com</a></li>
-                <li>Discord: <a>Laighlin#0371</a></li>
-            </ul>
-        </div>
-    </main>
-    <svg viewBox="0 0 500 150" preserveAspectRatio="none" class="wave" id="one"><path d="M-13.36,88.98 C168.85,182.73 276.72,-73.84 506.31,79.10 L500.00,150.00 L0.00,150.00 Z"></path></svg>
-    <svg viewBox="0 0 500 150" preserveAspectRatio="none" class="wave" id="two"><path d="M-13.36,88.98 C168.85,182.73 276.72,-73.84 506.31,79.10 L500.00,150.00 L0.00,150.00 Z"></path></svg>
-    <div id="hex-holder">
-        <div class="hex" id="uno"></div>
-        <div class="hex" id="dos"></div>
-        <div class="hex" id="tres"></div>
-    </div>
-</body>
-
-</html>
+<div id="header"></div>
+<div class="left"></div>
+<div class="stuff">
+  <br><br>
+  <h1>Resume</h1>
+  <h2>Emily</h2>
+  <hr />
+  <br>
+  <p class="head">Interests</p>
+  <ul>
+    <li>Drawing</li>
+    <li>Photography</li>
+    <li>Design</li>
+    <li>Programming</li>
+    <li>Computer Science</li>
+  </ul>
+  <p class="head">Skills</p>
+  <ul>
+    <li>Web Design with HTML & CSS</li>
+  </ul>
+  <p class="head">Education</p>
+  <ul>
+    <a href="http://www.wiltonhighschool.org/pages/Wilton_High_School">
+      <li>Wilton High School</li>
+    </a>
+    <!--Link-->
+    <a href="https://www.silvermineart.org/">
+      <li>Silvermine School of Arts</li>
+    </a>
+    <li>Codeacademy</li>
+  </ul>
+  <p class="head">Experience</p>
+  <ul>
+    <li>Student Technology Intern for Wilton School District</li>
+    <li>Babysitter</li>
+  </ul>
+  <p class="head">Extracurriculars</p>
+  <ul>
+    <li>Recycling Club</li>
+    <li>Gardening Club</li>
+    <li>Book Club</li>
+  </ul>
+</div>
+<div class="right"></div>
+<div id="footer">
+  <h2 id="name">Emily</h2></div>
